# django-notifications

./: .coverage  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  AUTHORS.txt  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  Makefile  README.md  README.rst  docker-compose.yaml  dockerfile  manage.py  prospector.yaml  pyproject.toml  serializers.py  setup.cfg  setup.py  tox.ini  urls.py  version.py  views.py  viewsets.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  coverage.yml  test.yml
env/: pip-selfcheck.json  pyvenv.cfg
notifications/: __init__.py  admin.py  apps.py  compat.py  filters.py  helpers.py  manage.py  managers.py  mixins.py  models.py  notification_types.py  querysets.py  serializers.py  settings.py  signals.py  test_settings.py  tests.py  types.py  urls.py  utils.py  views.py  viewsets.py
notifications/base/: admin.py  models.py
notifications/drf/: mixins.py  routers.py  serializers.py  utils.py  views.py
notifications/drf/tests/: factories.py  test_views.py
notifications/locale/id/LC_MESSAGES/: django.mo  django.po
notifications/locale/ru/LC_MESSAGES/: django.mo  django.po
notifications/locale/tr/LC_MESSAGES/: django.mo  django.po
notifications/management/commands/: delete_old_notifications.py
notifications/migrations/: 0001_initial.py  0001_initial_squashed_0008_index_together_recipient_unread.py  0002_auto_20150224_1134.py  0002_auto__add_field_notification_data.py  0003_auto__add_field_notification_unread.py  0003_notification_data.py  0004_auto_20150826_1508.py  0004_convert_readed_to_unread.py  0005_auto_20160504_1520.py  0005_auto__del_field_notification_readed.py  0006_auto_20170814_1654.py  0006_auto__add_field_notification_level.py  0006_indexes.py  0006_notification_uuid.py  0007_add_timestamp_index.py  0007_auto_20161205_1712.py  0007_auto_20190327_1538.py  0007_notification_unseen.py  0008_add_notification_uuid.py  0008_alter_notification_options_and_more.py  0008_auto_20190327_1538.py  0008_index_together_recipient_unread.py  0009_add_notification_uuid.py  0009_alter_notification_data.py  0009_alter_notification_options_and_more.py  0009_auto_20190705_2224.py  0009_index_together_recipient_unread.py  0009_notification_data_tmp.py  0009_notification_site.py  0009_notificationtemplate.py  0009_rename_data_notification_data_tmp.py  0009_rename_notification_recipient_unread_notificatio_recipie_8bedf2_idx_and_more.py  0010_alter_notification_data.py  0010_auto_20200331_1203.py  0010_auto_20220523_1643.py  0010_rename_notification_recipient_unread_notificatio_recipie_8bedf2_idx.py  0011_notification_new_level.py  0012_auto_20230601_1905.py  0013_remove_notification_level.py  0014_rename_new_level_notification_level.py  (+5 more)
notifications/models/: __init__.py  base.py  notification.py
notifications/south_migrations/: 0002_auto__add_field_notification_data.py  0003_auto__add_field_notification_unread.py  0005_auto__del_field_notification_readed.py  0006_auto__add_field_notification_level.py  0007_auto__del_field_notification_data__add_field_notification_deleted__add.py  0008_auto__add_field_notification_data.py
notifications/static/notifications/: action_templates.js  notify.js
notifications/templates/notifications/: list.html  notice.html  test_tags.html
notifications/templatetags/: notifications_tags.py
notifications/tests/: __init__.py  settings.py  settings_for_tests.py  test_admin.py  test_models.py  test_querysets.py  test_settings.py  test_signals.py  test_template_tags.py  tests.py  urls.py  urls_for_tests.py  views.py
notifications/tests/factories/: notifications.py  users.py
notifications/tests/sample_notifications/: __init__.py  admin.py  apps.py  models.py  tests.py
notifications/tests/sample_notifications/migrations/: 0001_initial.py
notifications/tests/sample_notifications/templatetags/: notifications_tags.py
notifications/tests/static/notifications/: live-test.js
notifications/tests/templates/: test_live.html
notifications/tests/test_migrations/: test_level_migration.py
notifications/tests/test_models/: models.py
notifications/tests/test_models/migrations/: 0001_initial.py
notifications/tests/test_views/: conftest.py  constants.py  test_api.py  test_list.py  test_mark.py  test_mark_all.py  test_mixins.py
sample_website/: manage.py  settings.py  urls.py  views.py
sample_website/sample_app/: apps.py
sample_website/static/: live-test.js
sample_website/templates/: base.html  test_live.html
