[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python
# 3. If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support.
universal=1

[options]
include_package_data = True
install_requires =
    django>=2.2
    django-model-utils>=3.1.0
    jsonfield>=2.1.0
    pytz
    swapper
test_requires=
    django>=2.2
    django-model-utils>=3.1.0
    jsonfield>=2.1.0
    pyt
    python-dateutil
    click
packages=
    notifications
    notifications.base
    notifications.templatetags
    notifications.migrations
